<resources>
    <string name="app_name">Navigation Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Generator</string>
    <string name="nav_movies">Commander</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Generator</item>
        <item>Commander</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="other">Other</string>
    <string name="ip">ip address</string>
    <string name="user">username</string>
    <string name="pass">password</string>
    <string name="log">login</string>
    <string name="lan1">L1</string>
    <string name="cpu">CPU</string>
    <string name="cmd">CMD</string>
    <string name="gen">GENERATE</string>
    <string name="disconnect">DISCOONNECT</string>
    <string name="lan2">L2</string>
    <string name="lan3">L3</string>
    <string name="lan4">L4</string>
    <string name="lan5">L5</string>
    <string name="lan6">L6</string>
    <string name="lan7">L7</string>
    <string name="lan8">L8</string>
    <string name="lan9">L9</string>
    <string name="lan10">L10</string>
    <string name="lan11">L11</string>
    <string name="lan12">L12</string>
    <string name="lan13">L13</string>
    <string name="va">value</string>
    <string name="se">send</string>
    <string name="USER">username</string>
    <string name="PROF">profile</string>
    <string name="prefex">بادئة اسم المستخدم</string>
    <string name="passlength">طول كلمة المرور</string>
    <string name="generate">انتاج</string>
    <string name="userlength">طول اسم المستخدم</string>
    <string name="adet">عدد المستخدمين</string>
    <string name="turn">تشغيل المستعرض</string>
    <string name="address">address</string>
    <string name="ok">Ok</string>
</resources>